...
          // Search Bar
          Padding(
            padding: EdgeInsets.all(16.0),
            child: CustomSearchBar(
                controller: searchController,
                onChanged: filterFriends,
                hintText: "Search Friends...",
            ),
          ),
          SizedBox(height: 16),

          // Friends and Events List
          Expanded(
...
                              onPressed: () {
                                Navigator.pop(context); // Close dialog
                                Navigator.pushNamed(
                                    context, '/create_event_list');
                              },
                              child: Text(
                                'Yes, take me there!',
                                style: TextStyle(
                                  color: AppColors.navyBlue,
                                  fontSize: 17,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
...
